Fixed the nav when it is on mobile. Also fixed the the images that weren't responsive

--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -130,9 +130,6 @@ button:hover {
   height: 400px;
   text-align: left;
 }
-.left-split img {
-  width: 100%;
-}
 .left-split .text-container {
   padding: 25px;
   padding-top: 15px;
@@ -152,9 +149,6 @@ button:hover {
   padding-top: 15px;
   font-weight: 300;
   font-size: 18px;
-}
-.right-split img {
-  width: 100%;
 }
 
 .underline {
@@ -562,6 +556,42 @@ h1 {
   }
 }
 @media only screen and (max-width: 768px) {
+  header {
+    background-color: black;
+  }
+  header .container {
+    padding: 25px;
+  }
+  header .nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333333;
+    color: #ffffff;
+  }
+  header .nav ul li {
+    float: none;
+  }
+  header .nav ul li a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    padding-left: 40px;
+    padding-right: 40px;
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 300;
+  }
+  header .nav ul li a:hover {
+    background-color: #B92C2C;
+  }
+  header .nav hr {
+    border-color: #B92C2C;
+    margin: 0;
+    border-top: 3px solid #B92C2C;
+  }
+
   #whatitdo .left-split {
     display: none;
   }
